# warp-transducer

./: .gitmodules  CMakeLists.txt  LICENSE  README.md  rnnt_loss-inl.h  rnnt_loss.cc
docs/: rnnt_notes.tex
include/: rnnt.h
include/detail/: cpu_rnnt.h  cpu_rnnt_kernel.h  gpu_rnnt.h  gpu_rnnt_kernel.h  hostdevice.h  reduce.h  rnnt_helper.h
pytorch_binding/: README.md  setup.py
pytorch_binding/src/: binding.cpp  cpu_binding.h  gpu_binding.h
pytorch_binding/test/: test.py  test_cuda.py  test_time.py  transducer_np.py
pytorch_binding/warprnnt_pytorch/: __init__.py
src/: reduce.cu  rnnt_entrypoint.cpp  rnnt_entrypoint.cu
tensorflow_binding/: .gitignore  README.md  setup.py
tensorflow_binding/src/: warprnnt_op.cc
tensorflow_binding/tests/: test_basic.py  test_warprnnt_op.py
tensorflow_binding/warprnnt_tensorflow/: __init__.py
tests/: random.cpp  test.h  test_cpu.cpp  test_gpu.cu  test_time.cpp  test_time.cu
